force-app/main/default/objects/Mercado__c/Mercado__c.object-meta.xml
<CustomObject>
    <description>Informa dados do mercado de criptomoedas</description>
    <label>Mercado</label>
    <nameField>
        <label>Mercado Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mercados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>