force-app/main/default/objects/Mercado__c/fields/Moeda_Primaria__c.field-meta.xml
<CustomField>
    <fullName>Moeda_Primaria__c</fullName>
    <formula>LEFT( Name ,  FIND(&quot;/&quot;,Name)-1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moeda Primária</label>
    <type>Text</type>
</CustomField>