force-app/main/default/objects/Mercado__c/fields/Moeda_Secundaria__c.field-meta.xml
<CustomField>
    <fullName>Moeda_Secundaria__c</fullName>
    <formula>RIGHT(Name, LEN(Name)-FIND(&quot;/&quot;, Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moeda Secundária</label>
    <type>Text</type>
</CustomField>