force-app/main/default/objects/Mercado__c/fields/PrecoMedio__c.field-meta.xml
<CustomField>
    <fullName>PrecoMedio__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Preco Médio</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>