force-app/main/default/objects/Mercado__c/fields/QtdeCarteira__c.field-meta.xml
<CustomField>
    <fullName>QtdeCarteira__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qtde em carteira</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>