force-app/main/default/objects/Mercado__c/fields/Total_Vendido__c.field-meta.xml
<CustomField>
    <fullName>Total_Vendido__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Vendido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>