force-app/main/default/objects/Mercado__c/fields/TotalComprado__c.field-meta.xml
<CustomField>
    <fullName>TotalComprado__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Comprado</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>